[package]
name = "rust-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
png = "0.17.8"
rand = "0.8.5"
rayon = "1.7.0"
threadpool = "1.8.1"
tokio = { version ="1.28.0", features = ["full"]}
