[package]
name = "rust-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version="0.21.3", features = ["glow"]}
rand = { version="0.8.5", features= ["small_rng"]}
rayon = "1.7.0"
rfd = "0.11.3"
threadpool = "1.8.1"
image = { version = "0.24", default-features = false, features = ["png"] }
rand_chacha = "0.3.1"
glam = "0.24.0"
